@@ -1,3 +1,9 @@
+2002-07-02  Per Bothner  <per@bothner.com>
+
+	* XMLPrinter.java:  Replace all calls of writeRaw to super.write.
+	This avoids a JDK1.1 problem with super.out not being accessible.
+	(writeRaw):  Remove no-longer-used methods.
+
 2002-06-26  Per Bothner  <per@bothner.com>
 
 	* XMLParser.java.in (parse):  Fix setting of 'start' after 'fill'.
